matrix/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: conduit
  namespace: conduit
spec:
  type: ClusterIP
  selector:
    app: conduit
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conduit
  namespace: conduit
  labels:
    app: conduit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conduit
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: conduit
    spec:
      restartPolicy: Always
      containers:
        - name: conduit
          image: registry.gitlab.com/famedly/conduit/matrix-conduit:latest
          ports:
            - containerPort: 80
              name: conduit
          volumeMounts:
            - name: db
              mountPath: /var/lib/matrix-conduit/
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: conduit-pvc
