matrix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    spec.ingressClassName: traefik
  labels:
    app: conduit
  name: conduit-ingress
  namespace: conduit
spec:
  rules:
  - host: conduit.duti.dev
    http:
      paths:
      - backend:
          service:
            name: conduit
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - conduit.duti.dev
    secretName: conduit-tls
